refactor: Tier 0 mechanical quick wins Q1-Q11 (#906) (#926)
* refactor(backend): dedup PageResponse envelope, dead mappers, executors, bank amounts (#906)

Tier-0 quick wins from the tech-debt roadmap (#906), all backend-internal:

- Add PageResponse.of(Page<T>) and delete the 12 copy-pasted per-controller
  toPageResponse helpers, repointing all callers. The two Mission endpoints that
  rendered the sort direction in uppercase are unified on lowercase to match
  PaginationUtil.toSortStrings (MissionFinanceEntryControllerTest updated).
- Remove the dead EntityMappers utility and its test (zero production callers);
  add KommandoGroupMapper and wire it into KommandoGroupService and
  LeitungViewService, replacing the byte-identical hand-built mapping.
- Add AsyncConfig.buildExecutor(...) to collapse the four duplicated
  ThreadPoolTaskExecutor builders into one construction path.
- Route six duplicated stripTrailingZeros().toPlainString() sites through the
  existing BankAmounts.plain() helper.

No behaviour change beyond the sort-token casing normalization. Verified with
spotlessApply, backend compile/checkstyle/spotbugs and the full backend test
suite (incl. ArchitectureTest); net -536 LOC.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@gmail.com>

* refactor(backend): extract RefineryOrderService.resolveGood to dedup good resolution (#906)

Q4 from the tech-debt roadmap (#906). The ~50-line refinery-good resolution
block (resolve and validate the input material as RAW, resolve or derive the
output material, wire the order back-reference) was byte-identical between the
create and update paths. Extract it into a private resolveGood(good, order):
create calls it per existing good, update keeps its clear()-then-add()
collection handling around the call. No behaviour change.

Verified: spotlessApply + backend compile/checkstyle/spotbugs + full backend
test suite (incl. ArchitectureTest) green.

Co-Authore